--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+// index.html 파일 내 Pi.init 함수
+const PI_CLIENT_ID = "여기에 복사한 새 앱의 Client ID를 붙여넣습니다"; 
+const REDIRECT_URI = "https://jjulddugi65.github.io/ai/"; // 새 저장소 이름으로 변경
 
+Pi.init({
+    version: "2.0",
+    client_id: PI_CLIENT_ID, 
+    sandbox: true, 
+    redirect_uri: REDIRECT_URI, 
+    // ...
+});
