--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,22 @@
-123
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h1>[앱 이름] Privacy Policy (Pi Maximum Transaction)</h1>
+    <p>This application collects minimal information to ensure core functionality and adherence to the Pi Network's policy.</p>
+    <h2>Information We Collect</h2>
+    <ul>
+        <li><strong>Pi User ID/Username:</strong> Collected via Pi SDK for authentication and displaying your name in the simulation ledger. This is the only personal data collected.</li>
+    </ul>
+    <h2>How We Use the Information</h2>
+    <ul>
+        <li>To authenticate you as a valid Pi Pioneer.</li>
+        <li>To personalize the transaction simulation ledger.</li>
+    </ul>
+    <h2>Data Sharing</h2>
+    <p>We do not share, sell, or commercialize your Pi User ID with any third parties outside of the intended app functionality.</p>
+    <p>For official Pi Network policies, please refer to the main Pi Network Terms of Service.</p>
+</body>
+</html>
